--- a/order.html
+++ b/order.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SNIST CANTEEN LOGIN</title>
+    <title>SNIST CANTEEN ORDER</title>
     <link rel="stylesheet" href="login.css">
     
 </head>
